[package]
name = "melee-vpad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
env_logger = "0.9.0"
evdev = "0.11.0"
input = "0.6.0"
libc = "0.2.102"
log = "0.4.14"
modular-bitfield = "0.11.2"
uinput = "0.1.3"
