[package]
edition = "2018"
name = "melee-vpad"
version = "0.1.0"
[dependencies]
config = "0.11.0"
crossbeam = "0.8.1"
env_logger = "0.9.0"
libc = "0.2.102"
log = "0.4.14"
modular-bitfield = "0.11.2"
serde_with = "1.13"
toml = "0.5.8"
xdg = "2.2.0"

[dependencies.cursive]
version = "0.16"

[dependencies.evdev-rs]
features = ["serde"]
git = "https://github.com/ndesh26/evdev-rs.git"

[dependencies.fixed]
features = ["serde-str", "serde", "std"]
version = "1.14"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"
